--- a/resposta.html
+++ b/resposta.html
@@ -84,7 +84,7 @@
         </article>
     </main>
     <footer>
-        <p>Site criado por Henrico</p>
+        <p>Site criado por Henrico Fernandes</p>
     </footer>
     
 </body>
